# run-dagger-py

./: README.md  action.yaml  mkdocs.yaml
docs/: index.md
docs/examples/test-example/: pyproject.toml
examples/test-example/test_example/: __init__.py
poetry-dagger-plugin/: pyproject.toml
poetry-dagger-plugin/poetry_dagger_plugin/: plugin.py
