[tool.poetry]
name = "poetry-dagger-plugin"
version = "0.1.0"
description = "A plugin for poetry that allows you to execute dagger workflows defined with the dagger python SDK."
authors = ["alambike"]
license = "MIT"
homepage = "https://github.com/prefapp/run-dagger-py"
repository = "https://github.com/prefapp/run-dagger-py"

[tool.poetry.dependencies]
poetry = "^1.4.2"
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.4"

[tool.poetry-dagger-plugin.workflows]
on-premises = "on_premises"
on-premises-test = "pytest"

[tool.poetry.plugins."poetry.application.plugin"]
exec = "poetry_dagger_plugin.plugin:ExecPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
